--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -33,7 +33,7 @@
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input name="traits.email" class="input is-large" type="email" placeholder="E-Post" />
+                                    <input name="traits.email" class="input is-large" type="email" placeholder="E-post" />
                                 </div>
                             </div>
                             <div class="field">
