--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,19 +49,19 @@
                             <div class="field">
                                 <div class="control">
                                     <input class="input" name="traits.name.first" type="text"
-                                        value="{{ user.name.first }}" id="traits.name.first">
+                                        value="{{ current_user.user.name.first }}" id="traits.name.first">
                                 </div>
                             </div>
                             <label class="label">Efternamn</label>
                             <div class="field">
                                 <div class="control">
                                     <input class="input" name="traits.name.last" type="text"
-                                        value="{{ user.name.last }}" id="traits.name.last">
+                                        value="{{ current_user.user.name.last }}" id="traits.name.last">
                                 </div>
                             </div>
                             <label class="label">
                                 E-post
-                                {% if user.verified %}
+                                {% if current_user.user.verified %}
                                 <span class="icon has-text-success">
                                     <i title="Verifierad" class="fas fa-check-square"></i>
                                 </span>
@@ -75,13 +75,13 @@
                             <div class="field">
                                 <div class="control">
                                     <input id="traits.email" class="input" name="traits.email" type="email"
-                                        value="{{ user.email }}">
+                                        value="{{ current_user.user.email }}">
                                 </div>
                             </div>
                             <label class="label">Telefonnummer</label>
                             <div class="field">
                                 <div class="control">
-                                    <input class="input" type="tel" value="{{ user.phone }}" id="traits.phone">
+                                    <input class="input" type="tel" value="{{ current_user.user.phone }}" id="traits.phone">
                                 </div>
                             </div>
                             <label class="label">Adress</label>
@@ -89,7 +89,7 @@
                                 <div class="control">
                                     <input id="traits.postal_address.street" class="input"
                                         name="traits.postal_address.street" type="text"
-                                        value="{{ user.postal_address.street }}">
+                                        value="{{ current_user.user.postal_address.street }}">
                                 </div>
                             </div>
                             <label class="label">Postnummer</label>
@@ -97,7 +97,7 @@
                                 <div class="control">
                                     <input id="traits.postal_address.postal_code" class="input"
                                         name="traits.postal_address.postal_code" type="text"
-                                        value="{{ user.postal_address.postal_code }}">
+                                        value="{{ current_user.user.postal_address.postal_code }}">
                                 </div>
                             </div>
                             <label class="label">Postort</label>
@@ -105,7 +105,7 @@
                                 <div class="control">
                                     <input id="traits.postal_address.city" class="input"
                                         name="traits.postal_address.city" type="text"
-                                        value="{{ user.postal_address.city }}">
+                                        value="{{ current_user.user.postal_address.city }}">
                                 </div>
                             </div>
                             <label class="label">Kommun</label>
@@ -115,7 +115,7 @@
                                         <select id="traits.municipality" name="traits.municipality" style="width: 100%;">
                                             <option disabled value>Välj din kommun</option>
                                             {% for municipality in municipalities %}
-                                            <option {{ "selected" if user.municipality == municipality.name else "" }} value="{{ municipality.name }}">{{ municipality.name }}</option>
+                                            <option {{ "selected" if current_user.user.municipality == municipality.name else "" }} value="{{ municipality.name }}">{{ municipality.name }}</option>
                                             {% end %}
                                         </select>
                                     </div>
@@ -128,7 +128,7 @@
                                         <select id="traits.country" name="traits.country" style="width: 100%;" onchange="updateMunicipalities()">
                                             <option disabled value>Välj ditt land</option>
                                             {% for country in countries %}
-                                            <option {{ "selected" if user.country == country.name else "" }} value="{{ country.name }}">{{ country.name }}</option>
+                                            <option {{ "selected" if current_user.user.country == country.name else "" }} value="{{ country.name }}">{{ country.name }}</option>
                                             {% end %}
                                         </select>
                                     </div>
@@ -254,7 +254,9 @@
                         <div class="select is-pulled-right">
                             <select>
                                 <option selected="selected" disabled="disabled">Föreningar du kan gå med i</option>
-                                <option>Ung Pirat Skåne</option>
+                                {% for organization in organizations %}
+                                <option value="{{ organization.id }}">{{ organization.name }}</option>
+                                {% end %}
                             </select>
                         </div>
                     </div>
