fix navbar to top

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ static_url('fontawesome/css/all.min.css') }}">
     {% block head %}{% end %}
 </head>
-<body>
+<body class="has-navbar-fixed-top">
     {% block body %}
     <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
