--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -38,6 +38,11 @@
                             </div>
                             <div class="field">
                                 <div class="control">
+                                    <input name="traits.phone" class="input is-large" type="tel" placeholder="Telefonnummer" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
                                     <input name="password" class="input is-large" type="password" placeholder="Lösenord" />
                                 </div>
                             </div>
