--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ static_url('css/profile.css') }}">
+{% end %}
+
 {% block content %}
 <section class="section">
     <div class="container">
