--- a/templates/admin/add-organization.html
+++ b/templates/admin/add-organization.html
@@ -6,6 +6,7 @@
 {% end %}
 {% block content %}
 {% module xsrf_form_html() %}
+<div class="section">
 <div class="container">
     <div class="field">
         <div class="label">Namn</div>
@@ -31,6 +32,7 @@
             onclick="submit()"
             id="saveButtonLastName">Spara</button></p>
     </div>
+</div>
 </div>
 {% end %}
 {% block scripts %}
