--- a/templates/admin/roles.html
+++ b/templates/admin/roles.html
@@ -5,9 +5,10 @@
 <link rel="stylesheet" href="{{ static_url('css/ag-theme-alpine.css') }}">
 {% end %}
 {% block content %}
+<div class="section">
 <div class="container">
     <h1 class="title">Roller</h1>
-    <p>Roller fungerar sådan att en roll är egentligen bara en samling av rättigheter. Dessa rättigheter styr vad en användare är tillåten att göra inom systemet. Dock när man tilldelar en roll så finns det två andra saker som begränsar användaren också. Dels vilken förening man blev tilldelad rollen i men också ifall rollen blev tilldelad ett visst geografiskt område.</p>
+    <p>En roll är egentligen bara en samling av rättigheter. Dessa rättigheter styr vad en användare med rollen har möjlighet att göra inom systemet. Utöver roller så finns det två saker som begränsar användaren. Den första är vilken förening man blivit tilldelad rollen inom. Den andra är om man blivit tilldelad rollen inom ett specifikt geografiskt område. Det betyder att en person som t.ex. får rättigheten att skicka ut mail till medlemmar kan begränsas av att bara kunna skicka mail till medlemmar i en viss förening, som bor inom ett visst geografiskt område.</p>
     <div id="myGrid" style="width: 100%; height: 80vh;" class="ag-theme-alpine"></div>
     <br>
     {% module xsrf_form_html() %}
@@ -20,6 +21,7 @@
         <button type="button" class="delete" onclick="hide('errorNotification');"></button>
         <p id="errorText"></p>
     </div>
+</div>
 </div>
 {% end %}
 
