Add section div

--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{{ static_url('css/ag-theme-alpine.css') }}">
 {% end %}
 {% block content %}
+<div class="section">
 <div class="container">
     <h1 class="title">Medlemmar</h1>
     <div class="select">
@@ -15,6 +16,7 @@
         </select>
     </div>
     <div id="myGrid" style="width: 100%; height: 80vh;" class="ag-theme-alpine"></div>
+</div>
 </div>
 {% end %}
 
