--- a/templates/admin/organizations.html
+++ b/templates/admin/organizations.html
@@ -6,9 +6,12 @@
 {% end %}
 {% block content %}
 {% module xsrf_form_html() %}
+<div class="section">
 <div class="container">
     <h1 class="title">Föreningar</h1>
+    <div class="field is-grouped">
     <div id="organizations" style="width: 100%; height: 80vh;" class="ag-theme-alpine"></div>
+    </div>
     <div class="field is-grouped">
     <p class="control">
         <button type="button" class="button is-success"
@@ -16,7 +19,7 @@
             id="saveButtonLastName">Lägg till</button></p>
     </div>
 </div>
-
+</div>
 {% end %}
 {% block scripts %}
 <script src="{{ static_url('js/checkbox-renderer.js') }}"></script>
