--- a/templates/sidemenu.html
+++ b/templates/sidemenu.html
@@ -1,12 +1,11 @@
-
             <aside class="menu sticky"> <!--- This menu is primarily used for finding information --->
                 <p class="menu-label">
                     Politik
                 </p>
                 <ul class="menu-list">
-                    <li><a>Nyheter</a></li> <!--- Links to dedicated news page --->
-                    <li><a>Principprogram</a></li>
-                    <li><a>Sakpolitiska program</a></li>
+                    <li><a href="https://piratpartiet.se/senaste-nytt/">Nyheter</a></li> 
+                    <li><a href="https://piratpartiet.se/principprogram">Principprogram</a></li>
+                    <li><a href="https://piratpartiet.se/sakpolitik">Sakpolitiska program</a></li>
                     <li><a>Talespersoner</a></li>
                 </ul>
                 <p class="menu-label">
