--- a/templates/sidemenu.html
+++ b/templates/sidemenu.html
@@ -1,9 +1,9 @@
-            <aside class="menu sticky"> <!--- This menu is primarily used for finding information --->
+<aside class="menu sticky"> <!--- This menu is primarily used for finding information --->
                 <p class="menu-label">
                     Politik
                 </p>
                 <ul class="menu-list">
-                    <li><a href="https://piratpartiet.se/senaste-nytt/">Nyheter</a></li> 
+                    <li><a href="https://piratpartiet.se/senaste-nytt/">Nyheter</a></li>
                     <li><a href="https://piratpartiet.se/principprogram">Principprogram</a></li>
                     <li><a href="https://piratpartiet.se/sakpolitik">Sakpolitiska program</a></li>
                     <li><a>Talespersoner</a></li>
@@ -23,5 +23,7 @@
                 </p>
                 <ul class="menu-list">
                     <li><a>Ställa upp i lokalt val</a></li>
+                    <li><a href="https://piratpartiet.se/om-oss/piratpartiets-organisation/#organisationsstruktur">Piratpartiets organisationsstruktur</a></li>
+                    <li><a href="https://piratpartiet.se/om-oss/piratpartiets-organisation/#arbetskultur">Piratpartiets arbetskultur</a></li>
                 </ul>
             </aside>
