--- a/templates/profile.html
+++ b/templates/profile.html
@@ -147,11 +147,11 @@
                     </form>
                     <br>
                     <div id="successNotification" class="notification is-success {{ "" if success else "is-hidden" }}">
-                        <button type="button" class="delete" onclick="hide('successNotification');"></button>
+                        <button type="button" class="delete" onclick="hideNotification('successNotification');"></button>
                         <p id="successText">Ändringar sparade!</p>
                     </div>
                     <div id="errorNotification" class="notification is-danger {{ "is-hidden" if error == "" else "" }}">
-                        <button type="button" class="delete" onclick="hide('errorNotification');"></button>
+                        <button type="button" class="delete" onclick="hideNotification('errorNotification');"></button>
                         <p id="errorText">{{ error }}</p>
                     </div>
                 </div>
@@ -222,12 +222,7 @@
                 </table>
 
                 <div class="content">
-                    <p><br></p>
-                </div>
-
-                <div class="content">
-                    <a id="medlemskap"></a>
-                    <h1>Hantera medlemskap</h1>
+                    <h1 id="medlemskap">Hantera medlemskap</h1>
                 </div>
 
                 <table class="table is-striped is-hoverable">
@@ -241,11 +236,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for membership in memberships %}
+                        {% for i, membership in enumerate(memberships, start=0) %}
                         <tr>
-                            <th>{{ membership.organization.name }}</th>
-                            <td>{{ membership.created }}</td>
-                            <td>{{ membership.renewal }}</td>
+                            <th>{{ member_orgs[i].name }}</th>
+                            <td>{{ membership.created.isoformat(' ', 'seconds') }}</td>
+                            <td>{{ membership.renewal.isoformat(' ', 'seconds') }}</td>
                             <td><button class="button is-success">Förnya</button></td>
                             <td><button class="button is-danger">Avsluta</button></td>
                         </tr>
@@ -256,7 +251,7 @@
                 <div class="columns">
                     <div class="column is-one-quarter">
                         <div class="select is-pulled-right">
-                            <select id="joinOrganization">
+                            <select id="joinOrganization" onchange="enableJoinButton();">
                                 <option selected="selected" disabled="disabled">Föreningar du kan gå med i</option>
                                 {% for organization in organizations %}
                                 <option value="{{ organization.id }}">{{ organization.name }}</option>
@@ -264,14 +259,14 @@
                             </select>
                         </div>
                     </div>
-
                     <div class="column">
-                        <button onclick="joinOrganization('{{ current_user.user.id }}');" class="button is-success is-pulled-left">Gå med i vald förening</button>
+                        <button id="joinButton" disabled onclick="joinOrganization('{{ current_user.user.id }}');" class="button is-success is-pulled-left">Gå med i vald förening</button>
                     </div>
                 </div>
 
-                <div class="content">
-                    <p><br></p>
+                <div id="joinNotification" class="notification is-success is-hidden">
+                    <button type="button" class="delete" onclick="hideNotification('joinNotification');"></button>
+                    <p id="joinText">Ändringar sparade!</p>
                 </div>
 
                 <div class="content">
