--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,19 +25,22 @@
                 </aside>
             </div>
             <div class="column">
-                <div name="testmodal" id="testmodal" class="modal">
+                <div id="reason" class="modal">
                     <div class="modal-background"></div>
                     <div class="modal-card">
                         <header class="modal-card-head">
-                            <p class="modal-card-title">Modal title</p>
-                            <button class="delete" aria-label="close" onclick="toggleModal2()"></button>
+                            <p class="modal-card-title">Avsluta medlemskap</p>
+                            <button class="delete" aria-label="close" onclick="toggleModal('reason')"></button>
                         </header>
                         <section class="modal-card-body">
-                            <!-- Content ... -->
+                            <div class="content">
+                                <p><b>Anledning varför du vill avsluta ditt medlemskap</b></p>
+                            </div>
+                            <textarea name="reason" class="textarea" placeholder="e.g. Jag avslutar mitt medlemskap på grund av att..."></textarea>
                         </section>
                         <footer class="modal-card-foot">
-                            <button class="button is-success">Save changes</button>
-                            <button class="button">Cancel</button>
+                            <button id="endMembershipButton" class="button is-danger" onclick="endMembership()">Avsluta medlemskap</button>
+                            <button class="button is-success" onclick="toggleModal('reason')">Avbryt</button>
                         </footer>
                     </div>
                 </div>
@@ -235,14 +238,14 @@
                             <th>Avsluta?</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="memberships">
                         {% for i, membership in enumerate(memberships, start=0) %}
-                        <tr>
-                            <th>{{ member_orgs[i].name }}</th>
-                            <td>{{ membership.created.isoformat(' ', 'seconds') }}</td>
-                            <td>{{ membership.renewal.isoformat(' ', 'seconds') }}</td>
-                            <td><button class="button is-success">Förnya</button></td>
-                            <td><button class="button is-danger">Avsluta</button></td>
+                        <tr is="membership-row"
+                            id="{{ membership.id }}"
+                            created="{{ membership.created.isoformat(' ', 'seconds') }}"
+                            renewal="{{ membership.renewal.isoformat(' ', 'seconds') }}"
+                            org-name="{{ member_orgs[i].name }}"
+                        >
                         </tr>
                         {% end %}
                     </tbody>
@@ -260,7 +263,7 @@
                         </div>
                     </div>
                     <div class="column">
-                        <button id="joinButton" disabled onclick="joinOrganization('{{ current_user.user.id }}');" class="button is-success is-pulled-left">Gå med i vald förening</button>
+                        <button id="joinButton" onclick="joinOrganization('{{ current_user.user.id }}');" class="button is-success is-pulled-left">Gå med i vald förening</button>
                     </div>
                 </div>
 
