--- a/templates/setup.html
+++ b/templates/setup.html
@@ -30,6 +30,11 @@
                                     <input name="org.description" class="input is-large" type="text" placeholder="Beskrivning av organisationen" />
                                 </div>
                             </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="feed_url" class="input is-large" type="text" placeholder="Nyhetsfeed (Bara RSS länkar)" />
+                                </div>
+                            </div>
                             <button id="install" onclick="saveSettings();" type="button" class="button is-block is-info is-large is-fullwidth">
                                 Installera
                             </button>
@@ -82,6 +87,7 @@
                         document.getElementById("install").remove();
                         document.getElementsByName("org.name")[0].disabled = true;
                         document.getElementsByName("org.description")[0].disabled = true;
+                        document.getElementsByName("feed_url")[0].disabled = true;
                     } else {
                         response.json().then(response => {
                             console.log(response);
