fix: actually use feed url specified by user
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/main.html
+++ b/templates/main.html
@@ -74,7 +74,7 @@
         }
     }
     {% if feed_url != "" %}
-    const RSS_URL = 'https://piratpartiet.se/feed/';
+    const RSS_URL = '{{ feed_url }}';
 
     fetch(RSS_URL)
         .then(response => response.text())
