--- a/templates/recovery.html
+++ b/templates/recovery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MemberPort | Glömt lösenord</title>
-    <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}" />
+    <link rel="stylesheet" href="{{ static_url('css/client.bundle.css') }}">
 </head>
 
 <body>
